--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -1,3 +1,13 @@
+<div class="bg-white">
+  <div class="row align-items-center no-gutters">
+    <div class="col-xl-12 col-lg-12 col-md-12 text-lg-right text-center">
+      <%= link_to anounce_path do%>
+      <h5 class="text-center mt-2" style="font-weight: bold;">2021.5.14</h5>
+      <h3 class="text-center mt-2" style="font-weight: bold; color: #fa518b;">サイトオープンのお知らせ</h3>
+      <% end %>
+    </div>
+  </div>
+</div>
 <div class="bg-primary">
   <div class="container">
     <!-- Hero Section -->
