--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,11 +12,16 @@
           <div class="mb-4">
             <h1 class="mb-1 font-weight-bold text-center" style="color: #00DB83;">新規登録</h1>
           </div>
+          <div class="border-bottom mb-4">
+            <div class="mt-3 text-right">
+              <%= link_to "ゲストログインはこちら", users_guest_sign_in_path, method: :post, data: {"turbolinks" => false}, "data-confirm" => "ゲストは他ユーザーからの回答やコメントがあった際、メール通知されません。よろしいですか？", style: "font-weight: bold; color: #00DB83;"%>
+            </div>
+          </div>
           <!-- Form -->
           <form>
             <div class="form-group">
               <span class="badge badge-light-danger text-danger mr-2">必須</span><%= f.label "ユーザー名", class: "form-label"%>
-              <%= f.text_field :name, id: "fname", class: "form-control", placeholder: "50文字以内" %>
+              <%= f.text_field :name, id: "fname", class: "form-control", placeholder: "20文字以内" %>
             </div>
               <!-- メールアドレス -->
             <div class="form-group">
