--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -98,7 +98,7 @@
       </li>
       <% else %>
       <li class="list-inline-item"><i class="fe fe-user mr-1"></i>ゲスト</li>
-      <%= link_to "ログアウト", new_user_session_path,data: {"turbolinks" => false}, class: "btn btn-outline-success btn-xs mr-1", style: "width:80px; font-size: 10px;" %>
+      <%= link_to "ログアウト", destroy_user_session_path, method: :delete,data: {"turbolinks" => false}, class: "btn btn-outline-success btn-xs mr-1", style: "width:80px; font-size: 10px;" %>
       <% end %>
       <% else %>
         <%= link_to "ログイン", new_user_session_path,data: {"turbolinks" => false}, class: "btn btn-outline-success btn-xs mr-1", style: "width:70px; font-size: 10px;" %>
@@ -116,7 +116,7 @@
       <% if user_signed_in?%>
         <a class="nav-link btn ml-2" href="/posts/new" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="far fa-hand-paper mr-1"></i>質問する</span></a>
       <% else %>
-        <a class="nav-link btn ml-2" href="/question" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="far fa-hand-paper mr-1"></i>質問する</span></a>
+        <a class="nav-link btn ml-2" href="/users/sign_up" data-turbolinks="false"><span class="link-menu" style="font-weight: bold;"><i class="far fa-hand-paper mr-1"></i>質問する</span></a>
       <% end %>
     </ul>
     </div>
@@ -212,7 +212,7 @@
           </li>
         <% else %>
           <li class="list-inline-item"><i class="fe fe-user mr-1"></i>ゲスト</li>
-          <%= link_to "ログアウト", new_user_session_path,data: {"turbolinks" => false}, class: "btn btn-outline-success btn-md mr-1" %>
+          <%= link_to "ログアウト", destroy_user_session_path, method: :delete,data: {"turbolinks" => false}, class: "btn btn-outline-success btn-md mr-1" %>
         <% end %>
         <% else%>
           <%= link_to "ログイン", new_user_session_path,data: {"turbolinks" => false}, class: "btn btn-outline-success mr-2" %>
