--- a/app/views/tops/_how_to.html.erb
+++ b/app/views/tops/_how_to.html.erb
@@ -16,8 +16,8 @@
         <div class="d-flex align-items-center flex-column">
           <span style="font-size: 18px; color: #00DB83"><i class="far fa-check-circle font-size-lg mr-1"></i>POINT2</span>
           <div class="ml-3">
-            <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">経験者のエピソード付き</h4>
-            <p class="mt-3 text-center">経験者の体験に基づいたエピソードも<br>一緒に教えてくれるからさらに安心！</p>
+            <h4 class="mt-2 mb-2 font-weight-semi-bold text-center"><i class="far fa-envelope"></i>メール通知</h4>
+            <p class="mt-3 text-center">あなたの質問に回答があった際や回答にコメントがあった時にメールで通知が来るから便利♪</p>
           </div>
         </div>
       </div>
@@ -27,7 +27,7 @@
           <span style="font-size: 18px; color: #00DB83""><i class="far fa-check-circle font-size-lg mr-1"></i>POINT3</span>
           <div class="ml-3">
             <h4 class="mt-2 mb-2 font-weight-semi-bold text-center">無料で質問ができる</h4>
-            <p class="mt-3 text-center">経験者への質問はすべて無料。<br>もちろん経験者からの回答閲覧も無料です。</p>
+            <p class="mt-3 text-center">経験者への質問はすべて無料。<br>もちろん経験者からの回答閲覧も無料です！</p>
           </div>
         </div>
       </div>
