--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -29,39 +29,40 @@
               <% @post_open.each do |post_open| %>
               <%= link_to post_path(post_open),data: {"turbolinks" => false}, class: "text-inherit" do %>
                 <div class="card pt-2 mb-5">
-                  <div class="card-body p-1 p-sm-3">
+                  <div class="card-body">
                     <div class="d-flex align-items-center">
-                      <div class="d-flex align-items-center justify-content-between flex-column">
-                        <% if post_open.user.profile_image.present? %>
-                          <%= image_tag post_open.user.profile_image.url, class: "avatar-lg rounded-circle border-width-4 border-white" %>
-                          <%= post_open.user.name %>
-                        <% else %>
-                          <%= image_tag "profile_default_img_128.png", class: "avatar-lg rounded-circle border-width-4 border-white" %>
-                          <%= post_open.user.name %>
-                        <% end %>
-                      </div>
-                      <div class="ml-3 d-flex flex-column">
+                      <div class="d-flex flex-column">
+                        <div class="d-flex flex-row mb-2 align-items-center">
+                          <% if post_open.user.profile_image.present? %>
+                          <%= image_tag post_open.user.profile_image.url, class: "rounded-circle avatar-md mr-2" %>
+                          <% else %>
+                          <%= image_tag "profile_default_img_128.png", class: "rounded-circle avatar-md mr-2" %>
+                          <% end %>
+                          <h4 class="mr-2 mb-0"><%= post_open.user.name %></h4>
+                          <!-- <span class="font-size-xs text-muted"><%= time_ago_in_words(post_open.created_at) + "前" %></span> -->
+                        </div>
+                        <h4 class="mb-3" style="font-weight: bold;"><%= post_open.title %></h4>
+                        <p class="mb-3" style="font-weight: bold;"><%= post_open.content %></p>
+                        <div class="text-center" style="d-flex: block;">
                         <% if post_open.post_image.present? %>
-                        <h4 class="mb-1" style="font-weight: bold;"><%= post_open.title.truncate(30) %><i class="far fa-image font-size-lg"></i></h4>
-                        <% else %>
-                        <h4 class="mb-1" style="font-weight: bold;"><%= post_open.title.truncate(30) %></h4>
+                          <%= image_tag post_open.post_image.url, class: "img-fluid mb-4", style:"height: 200px; width: auto; object-fit: cover;"%>
                         <% end %>
-                        <p><%= post_open.content.truncate(50) %></p>
+                        </div>
                         <div class="d-flex flex-row">
                           <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{post_open.category.root.name}/#{post_open.category.name}" %></li>
-                            <% if user_signed_in? %>
-                              <div class="ml-2"id="like-icon-post-<%= post_open.id.to_s %>">
-                                  <% if post_open.liked_by(current_user).present? %>
-                                    <%= link_to "いいねを取り消す", post_like_path(post_open.id, post_open.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
-                                  <% else %>
-                                    <%= link_to "いいね", post_likes_path(post_open), method: :POST, remote: true, class: "love hide-text" %>
-                                  <% end %>
-                              </div>
-                              <li class="list-inline-item" style="font-weight: bold;"><div id="like-text-post-<%= post_open.id.to_s %>"><%= render "like_text", { likes: post_open.likes } %></div></li>
-                            <% else %>
-                              <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-heart ml-2 mr-1"></i><%= post_open.likes.count %></li>
-                            <% end %>
-                          <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-comment-alt ml-2 mr-1"></i><%= post_open.answers.count %></li>
+                          <% if user_signed_in? %>
+                            <div class="ml-2" id="like-icon-post-<%= post_open.id.to_s %>">
+                              <% if post_open.liked_by(current_user).present? %>
+                                <%= link_to "いいねを取り消す", post_like_path(post_open.id, post_open.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
+                              <% else %>
+                                <%= link_to "いいね", post_likes_path(post_open), method: :POST, remote: true, class: "love hide-text" %>
+                              <% end %>
+                            </div>
+                            <li class="list-inline-item" style="font-weight: bold;"><div id="like-text-post-<%= post_open.id.to_s %>"><%= render "like_text", { likes: post_open.likes } %></div></li>
+                          <% else %>
+                            <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-heart ml-2 mr-1"></i><%= post_open.likes.count %></li>
+                          <% end %>
+                          <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-comment-alt mr-1"></i><%= "#{post_open.answers.count}" %></li>
                         </div>
                       </div>
                     </div>
@@ -81,36 +82,38 @@
                 <div class="card mb-5">
                   <div class="card-body">
                     <div class="d-flex align-items-center">
-                      <div class="d-flex align-items-center justify-content-between flex-column">
-                        <% if post_close.user.profile_image.present? %>
-                          <%= image_tag post_close.user.profile_image.url, class: "avatar-lg rounded-circle border-width-4 border-white" %>
-                          <%= post_close.user.name %>
-                        <% else %>
-                          <%= image_tag "profile_default_img_128.png", class: "avatar-lg rounded-circle border-width-4 border-white" %>
-                          <%= post_close.user.name %>
-                        <% end %>
-                      </div>
-                      <div class="ml-3 d-flex flex-column">
-                        <h4 class="mb-1" style="font-weight: bold;"><%= post_close.title %></h4>
-                        <p><%= post_close.content %></p>
+                      <div class="d-flex flex-column">
+                        <div class="d-flex flex-row mb-2 align-items-center">
+                          <% if post_close.user.profile_image.present? %>
+                          <%= image_tag post_close.user.profile_image.url, class: "rounded-circle avatar-md mr-2" %>
+                          <% else %>
+                          <%= image_tag "profile_default_img_128.png", class: "rounded-circle avatar-md mr-2" %>
+                          <% end %>
+                          <h4 class="mr-2 mb-0"><%= post_close.user.name %></h4>
+                          <!-- <span class="font-size-xs text-muted"><%= time_ago_in_words(post_close.created_at) + "前" %></span> -->
+                        </div>
+                        <h4 class="mb-3" style="font-weight: bold;"><%= post_close.title %></h4>
+                        <p class="mb-3" style="font-weight: bold;"><%= post_close.content %></p>
+                        <div class="text-center" style="d-flex: block;">
                         <% if post_close.post_image.present? %>
                           <%= image_tag post_close.post_image.url, class: "img-fluid mb-4", style:"height: 200px; width: auto; object-fit: cover;"%>
                         <% end %>
+                        </div>
                         <div class="d-flex flex-row">
                           <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{post_close.category.root.name}/#{post_close.category.name}" %></li>
                           <% if user_signed_in? %>
                             <div class="ml-2" id="like-icon-post-<%= post_close.id.to_s %>">
-                                <% if post_close.liked_by(current_user).present? %>
-                                  <%= link_to "いいねを取り消す", post_like_path(post_close.id, post_close.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
-                                <% else %>
-                                  <%= link_to "いいね", post_likes_path(post_close), method: :POST, remote: true, class: "love hide-text" %>
-                                <% end %>
+                              <% if post_close.liked_by(current_user).present? %>
+                                <%= link_to "いいねを取り消す", post_like_path(post_close.id, post_close.liked_by(current_user)), method: :DELETE, remote: true, class: "loved hide-text" %>
+                              <% else %>
+                                <%= link_to "いいね", post_likes_path(post_close), method: :POST, remote: true, class: "love hide-text" %>
+                              <% end %>
                             </div>
                             <li class="list-inline-item" style="font-weight: bold;"><div id="like-text-post-<%= post_close.id.to_s %>"><%= render "like_text", { likes: post_close.likes } %></div></li>
                           <% else %>
                             <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-heart ml-2 mr-1"></i><%= post_close.likes.count %></li>
                           <% end %>
-                          <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-comment-alt ml-2 mr-1"></i><%= post_close.answers.count %></li>
+                          <li class="list-inline-item" style="font-weight: bold;"><i class="far fa-comment-alt mr-1"></i><%= "#{post_close.answers.count}" %></li>
                         </div>
                       </div>
                     </div>
