--- a/app/views/tops/index.html.erb
+++ b/app/views/tops/index.html.erb
@@ -58,7 +58,7 @@
               <% end %>
               </div>
               <div class="d-flex flex-row">
-                <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{recent_post.category.root.name}/#{recent_post.category.name}" %></li>
+                <li class="list-inline-item"><i class="fa fa-tags mr-1"></i><%= "#{recent_post.category.root.name.truncate(6)}/#{recent_post.category.name.truncate(10)}" %></li>
                 <% if user_signed_in? %>
                   <div class="ml-2" id="like-icon-post-<%= recent_post.id.to_s %>">
                     <% if recent_post.liked_by(current_user).present? %>
