--- a/app/views/users/_action_count.html.erb
+++ b/app/views/users/_action_count.html.erb
@@ -24,7 +24,7 @@
       <div class="d-flex align-items-center flex-column">
         <span style="font-size: 18px; color: #00DB83"><i class="far fa-comment-alt font-size-lg mr-1"></i>回答数</span>
         <div class="ml-3">
-          <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= @user.answers_count %></h3>
+          <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= @user.answers.count %></h3>
         </div>
       </div>
     </div>
