--- a/app/views/users/mypage.html.erb
+++ b/app/views/users/mypage.html.erb
@@ -37,7 +37,7 @@
                 <div class="d-flex align-items-center flex-column">
                   <span style="font-size: 18px; color: #00DB83"><i class="fab fa-quora font-size-lg mr-1"></i>回答数</span>
                   <div class="ml-3">
-                    <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= current_user.answers_count %></h3>
+                    <h3 class="mt-2 mb-2 font-weight-semi-bold text-center"><%= current_user.answers.count %></h3>
                     <p class="mt-3 text-center">多くの人にあなたの経験を伝えましょう！</p>
                   </div>
                 </div>
